unpackaged/main/default/objects/GeneralSettings__c/GeneralSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting used to store general system settings</description>
    <label>General Settings</label>
</CustomObject>