unpackaged/main/default/objects/GeneralSettings__c/fields/ErrorLog_EmailRecipient__c.field-meta.xml
<CustomField>
        <fullName>ErrorLog_EmailRecipient__c</fullName>
        <description>Error Log Email Recipient</description>
        <label>Error Log Email Recipient</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>