unpackaged/main/default/objects/GeneralSettings__c/fields/GroupId_AllInternalUsers__c.field-meta.xml
<CustomField>
        <fullName>GroupId_AllInternalUsers__c</fullName>
        <description>The Id of public group with developerName AllInternalUsers</description>
        <inlineHelpText>Set the 18 digit version of ID for group with developerName AllInternalUsers</inlineHelpText>
        <label>GroupId AllInternalUsers</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>