unpackaged/main/default/objects/GeneralSettings__c/fields/Logger_DebugEnabled__c.field-meta.xml
<CustomField>
        <fullName>Logger_DebugEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true enables storing of Debug Application Log records</description>
        <label>Logger Debug Enabled</label>
        <type>Checkbox</type>
    </CustomField>