unpackaged/main/default/objects/GeneralSettings__c/fields/RICSC_ProductPortfolioIntegrationDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ProductPortfolioIntegrationDate__c</fullName>
        <description>its used in a batch to retrieve  transactions that are used in the propagation with the product portfolio object</description>
        <label>Product Portfolio Integration From Date</label>
        <type>Date</type>
    </CustomField>