unpackaged/main/default/objects/GeneralSettings__c/fields/RICSC_RunConsentsAlignmentAfterDCJob__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RunConsentsAlignmentAfterDCJob__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run consents alignment after DC job</label>
        <type>Checkbox</type>
    </CustomField>