unpackaged/main/default/objects/GeneralSettings__c/fields/RICSC_RunSegmentationAfterDCJob__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RunSegmentationAfterDCJob__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run segmentation after DC job</label>
        <type>Checkbox</type>
    </CustomField>