unpackaged/main/default/objects/GeneralSettings__c/fields/RICSC_VCACRMNonChinaPublicGroupNoMembers__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VCACRMNonChinaPublicGroupNoMembers__c</fullName>
        <description>VCA Roles that doesnt belong on the VCACRMNonChinaRoles Public Group</description>
        <label>VCACRMNonChinaPublicGroupNoMembers</label>
        <type>TextArea</type>
    </CustomField>