unpackaged/main/default/objects/GeneralSettings__c/fields/Scope__c.field-meta.xml
<CustomField>
        <fullName>Scope__c</fullName>
        <description>The scope used by the system to control deviation from global framework. If not necessary just use -All- value</description>
        <label>Scope</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>